菜单以及视频列表展示

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -16,9 +16,13 @@
 .searchBar {
   width: 20%;
   float: right;
-  //position: absolute;
-  //top: 50%;
-  //right: 15%
+
+}
+
+.ant-layout-footer {
+  width: 90%;
+  margin: 0 auto;
+  padding: 24px 0;
 }
 
 .menu {
@@ -26,5 +30,7 @@
   bottom: 0;
   left: 25%
 }
+
+
 
 
