文章显示上传开发

--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -16,8 +16,11 @@
 .searchBar {
   width: 20%;
   float: right;
-
 }
+:global(.ant-layout) {
+  background-color: white;
+}
+
 
 .ant-layout-footer {
   width: 90%;
