--- a/src/routes/indexPage.less
+++ b/src/routes/indexPage.less
@@ -2,20 +2,17 @@ body{
   margin: 0;
 }
 
-.container {
-  padding: 0;
-  margin: 0;
-}
-
-.wrapper {
-  width: 980px;
-  margin: auto 0;
-  background-color: black;
+.main {
+  width: 90%;
+  margin: auto;
+  height: 100vh;
 }
 
 .videoList {
+  display: flex;
+  justify-content: space-between;
   height: 260px;
-  width: 100%;
+
 }
 
 .ant-carousel {
@@ -37,17 +34,18 @@ body{
 .carousel {
   height: 260px;
   width: 440px;
-  float: left;
 }
 
 .videoCardList {
+  display: flex;
+  flex-wrap:wrap;
+  justify-content: space-between;
   position: relative;
   overflow: hidden;
   height: 260px;
 }
 
 .videoCard {
-  float: left;
   border-radius: 5px;
   width: 200px;
   height: 120px;
@@ -92,7 +90,6 @@ body{
   opacity: 0;
   color: white;
   font-size: 12px;
-
   overflow: hidden;
   transition: all .6s;
 }
@@ -106,3 +103,21 @@ body{
 .mask:hover .narrator{
   opacity: 0.7;
 }
+
+.articleContent {
+  margin-top: 64px;
+  width: auto;
+  background-color: white;
+}
+
+.moduleTitle {
+  color: #4a4a4a;
+  display: flex;
+  font-size: 1.5rem;
+  justify-content: space-between;
+}
+
+
+
+
+
