--- a/src/components/VideoList/index.less
+++ b/src/components/VideoList/index.less
@@ -1,18 +1,17 @@
-body{
-  margin: 0;
+.titleBar {
+  width: 100%;
+  border-bottom: 1px solid #e6e8e8;
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
 }
 
-.main {
-  width: 90%;
-  margin: auto;
-  height: 100vh;
-}
 
 .videoList {
   display: flex;
   justify-content: space-between;
   height: 260px;
-
+  margin-top: 30px;
 }
 
 .ant-carousel {
@@ -76,7 +75,7 @@ body{
   background: linear-gradient(transparent,rgba(0,0,0,.1) 20%,rgba(0,0,0,.2) 35%,rgba(0,0,0,.6) 65%,rgba(0,0,0,.9));
 }
 
-.title {
+.videoTitle {
   color: #fff;
   height: 40px;
   overflow: hidden;
@@ -103,21 +102,3 @@ body{
 .mask:hover .narrator{
   opacity: 0.7;
 }
-
-.articleContent {
-  margin-top: 64px;
-  width: auto;
-  background-color: white;
-}
-
-.moduleTitle {
-  color: #4a4a4a;
-  display: flex;
-  font-size: 1.5rem;
-  justify-content: space-between;
-}
-
-
-
-
-
